--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   buildCheck:
-    runs-on: [windows-latest, macos-latest]
+    runs-on: [windows-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
