--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -5,7 +5,7 @@ jobs:
   buildCheck:
     runs-on: 
     - windows-latest
-    - macos-latest
+    - ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
