--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -19,3 +19,5 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn clean install
+      - name: upload code coverage
+      run: bash <(curl -s https://codecov.io/bash)
