--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
       - name: upload code coverage
-        run: bash <(curl -s https://codecov.io/bash)
+        run: curl https://codecov.io/bash > codecov.sh
