--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -19,5 +19,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn clean install
-      - name: upload code coverage
+      - name: Generate code coverage
         run: curl https://codecov.io/bash > codecov.sh
+      - name: upload code coverage
+        run: bash codecov.sh 
