--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -17,8 +17,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Test with Maven
+        run: mvn clean test
   buildCheckMac:
     runs-on: macos-latest
     steps:
@@ -34,5 +34,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Test with Maven
+        run: mvn clean test
